--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,10 @@
 }
 
 body {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 30px;
   margin: 0;
   font-family: "Roboto", sans-serif;
